[package]
name = "grizzly_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
cron = "0.12"
tokio = { version = "1", features = ["time", "rt", "macros"] }
tokio-util = "0.7.10"
uuid = { version = "1", features = ["v4", "fast-rng",] }
chrono = "0.4.33"
futures = "0.3.30"
thiserror = "1.0"
tracing = "0.1.40"
rand = "0.8.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }